--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Converter</module>
         <module>Utility</module>
         <module>Encryptor</module>
+        <module>2DGame</module>
     </modules>
 
     <groupId>de</groupId>
