create pacman game module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Utility</module>
         <module>Encryptor</module>
         <module>JumpAndRun</module>
+        <module>Pacman</module>
     </modules>
 
     <groupId>de</groupId>
