--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>Utility</module>
         <module>Encryptor</module>
         <module>JumpAndRun</module>
-        <module>Pacman</module>
+        <module>EulerscheKonstante</module>
     </modules>
 
     <groupId>de</groupId>
