create extended tic-tac-toe module

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Encryptor</module>
         <module>JumpAndRun</module>
         <module>EulerscheKonstante</module>
+        <module>ExtendedTicTacToe</module>
     </modules>
 
     <groupId>de</groupId>
