--- a/GraphicCalculator/pom.xml
+++ b/GraphicCalculator/pom.xml
@@ -53,7 +53,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                de.jonas.graphiccalculator.GraphicCalculator
+                                de.jonas.graphiccalculator.GraphingCalculator
                             </mainClass>
                         </manifest>
                     </archive>
